# icm20948-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  copy.rs  package-lock.json  remote_debug.sh
.ssh/: known_hosts
examples/: common.rs  linux_advanced.rs  linux_basic.rs  linux_realtime_plot.rs  rhai_runner.rs  script.rhai
scripts/: remote-debug.sh  remote_debug.ps1
src/: api_rhai.rs  augmented.rs  base.rs  compass.rs  config.rs  controls.rs  conversion.rs  device.rs  dmp.rs  dmp3_firmware.rs  dmp_fifo.rs  dmp_gyro_sf_draft.rs  fifo.rs  firmware.rs  geomag.rs  lib.rs  selftest.rs  types.rs
src/interface/: mod.rs
src/register/: mod.rs
tools/: convert_firmware.py  dmp3_firmware2.rs
