[package]
name = "icm20948-rs"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Perez <sergio@pereznus.es>"]
description = "Rust driver for InvenSense ICM20948 IMU sensor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/serper/icm20948-rs"
readme = "README.md"
keywords = ["embedded", "sensor", "accelerometer", "gyroscope", "imu"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = "0.2.7"
libm = "0.2.8"
log = "0.4.17"
rhai = { version = "1.10", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
# Mover dependencias opcionales aquí
plotters = { version = "0.3", optional = true }
crossterm = { version = "0.25", optional = true }
# linux-embedded-hal para soporte de Linux (opcional para la biblioteca)
linux-embedded-hal = { version = "0.3", optional = true }
signal-hook = "0.3.17"
bytemuck = "1.22.0"
once_cell = "1.8.0"

[dev-dependencies]
# Para los ejemplos de Linux (no opcionales)
linux-embedded-hal = "0.3"
ctrlc = "3.4.0"    # Para manejar la señal Ctrl+C

[features]
default = []
rhai = ["dep:rhai", "dep:serde", "dep:serde_json", "dep:linux-embedded-hal"]
std = []           # Característica para habilitar funcionalidades de std
linux = ["dep:linux-embedded-hal"] # Nueva característica para soporte de Linux
# Actualizar la feature de plotting para incluir linux-embedded-hal
plotting = ["plotters", "crossterm", "dep:linux-embedded-hal", "linux"]

[[example]]
name = "linux_basic"
required-features = ["linux"]

[[example]]
name = "linux_advanced"
required-features = ["linux"]

[[example]]
name = "linux_realtime_plot"
required-features = ["plotting", "linux"]

[package.metadata.docs.rs]
all-features = true

[profile.dev]
debug = true
