[package]
name = "icm20948-rs"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Perez <sergio@pereznus.es>"]
description = "Rust driver for InvenSense ICM20948 IMU sensor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/serper/icm20948-rs"
readme = "README.md"
keywords = ["embedded", "sensor", "accelerometer", "gyroscope", "imu"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = "1.0.0"
libm = "0.2.8"
log = "0.4.28"
rhai = { version = "1.10", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
plotters = { version = "0.3", optional = true }
crossterm = { version = "0.25", optional = true }
linux-embedded-hal = { version = "0.4.1", optional = true }
once_cell = "1.21.3"

[dev-dependencies]
linux-embedded-hal = "0.4.1"
ctrlc = "3.4.0"

[features]
default = []
rhai = ["dep:rhai", "dep:serde", "dep:serde_json", "dep:linux-embedded-hal", "linux"]
std = []
linux = ["dep:linux-embedded-hal"]
plotting = ["plotters", "crossterm", "dep:linux-embedded-hal", "linux"]

[[example]]
name = "linux_basic"
required-features = ["linux"]

[[example]]
name = "linux_advanced"
required-features = ["linux"]

[[example]]
name = "linux_realtime_plot"
required-features = ["plotting", "linux"]

[package.metadata.docs.rs]
all-features = true

[profile.dev]
debug = true
